# ranked-choice-tabulator

./: LICENSE  README.md  RankedChoiceSample.xlsx  pyproject.toml  tabulate.py  test_tabulate.py
